[tool.poetry]
name = "gpao"
version = "0.1.0"
description = "Utils Package for gpao and qsm handling"
authors = ["Sylvain Guieu <Sylvain.Guieu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydevmgr-vlt = "0.5.dev0"
numpy = "1.23"
matplotlib = "^3.9.1"
scipy = "1.13"
astropy = "5.3.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
